--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: php
 
-sudo: false
-
-matrix:
-  include:
-    - php: 7.1
+php:
+  - '7.1'
 
 before_script:
   - composer install
 
 script:
-  - php -S localhost:8000 -t tests/server.php &
+  - php -S localhost:8000 tests/server.php &
   - composer test
