--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,18 @@
 {
+    "name": "jakobjohansson/hook",
+    "description": "an API for handling webhooks",
+    "type": "library",
+    "require-dev": {
+        "phpunit/phpunit": "^6.4",
+        "guzzlehttp/guzzle": "^6.3"
+    },
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Jakob Johansson",
+            "email": "jakobjohansson2@icloud.com"
+        }
+    ],
     "scripts": {
         "test": "./vendor/bin/phpunit"
     },
@@ -11,9 +25,5 @@
        "psr-4": {
            "Hook\\Tests\\": "tests/"
        }
-   },
-    "require-dev": {
-        "phpunit/phpunit": "^6.4",
-        "guzzlehttp/guzzle": "^6.3"
-    }
+   }
 }
