--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "jakobjohansson/hook",
-    "description": "an API for handling webhooks",
+    "description": "a library for quickly dealing with git webhooks",
     "type": "library",
     "require-dev": {
         "phpunit/phpunit": "^6.4",
@@ -14,7 +14,6 @@
         }
     ],
     "scripts": {
-        "boot": "@php -S localhost:8000 tests/server.php &",
         "test": "phpunit"
     },
     "autoload": {
@@ -26,12 +25,5 @@
        "psr-4": {
            "Hook\\Tests\\": "tests/"
        }
-   },
-   "extra": {
-       "scripts-description": {
-           "boot": "Boot up a temporary test server.",
-           "test": "Run all tests."
-       }
-    }
-
+   }
 }
