--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,6 @@
     "type": "library",
     "homepage": "https://jakobjohansson.github.io/hook/",
     "keywords": ["webhook", "github", "gitlab", "bitbucket"],
-    "require-dev": {
-        "phpunit/phpunit": "^6.4",
-        "guzzlehttp/guzzle": "^6.3"
-    },
     "license": "MIT",
     "authors": [
         {
@@ -15,8 +11,12 @@
             "email": "jakobjohansson2@icloud.com"
         }
     ],
-    "scripts": {
-        "test": "phpunit"
+    "require" : {
+        "php" : "^7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.4",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
@@ -27,5 +27,8 @@
        "psr-4": {
            "Hook\\Tests\\": "tests/"
        }
-   }
+   },
+    "scripts": {
+        "test": "phpunit"
+    }
 }
